[package]
name = "tumblr-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
oauth = { version = "0.6.0", package = "oauth1-request" }
reqwest = "0.11.18"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_urlencoded = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
