[package]
name = "tumblr-api-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
oauth2 = "4.4.1"
reqwest = "0.11.18"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
serde_urlencoded = "0.7.1"
serde_with_macros = "3.1.0"
snafu = "0.7.5"
tokio = { version = "1.29.1", features = ["full"] }
